# thermal

./: Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
correlation/: README.md  run.sh
examples/pa/: pa.flp  pa.thermal
src/: engine.rs  floorplan.rs  job.rs  lib.rs  main.rs  solver.rs  thermal.rs
tests/: example.rs
